<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_item_job"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/job_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/title"
            android:textColor="@color/color_text"
            android:textSize="25sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/job_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:fontFamily="@font/architects_daughter"
                android:text="@string/type"
                android:textColor="@color/color_secondary_text"
                android:textSize="15sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/job_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/architects_daughter"
                android:text="@string/date"
                android:textColor="@color/color_secondary_text"
                android:textSize="15sp" />
        </RelativeLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/job_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/description"
            android:textColor="@color/color_secondary_text"
            android:textSize="20sp" />

    </LinearLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/job_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/pay"
        android:textColor="@color/color_text"
        android:textSize="20sp" />

</RelativeLayout>
