<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/gradient_background"
    android:gravity="bottom"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/nav_header_profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/profile_image"
        android:scaleType="fitCenter"
        android:src="@drawable/default_image_navbar" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/nav_header_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/user_name"
        android:textColor="@color/color_text"
        android:textSize="30sp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/nav_header_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nav_header_name"
        android:layout_marginStart="155dp"
        android:layout_marginTop="-10dp"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/rating"
        android:textColor="@color/color_secondary_text"
        android:textSize="14sp" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="90dp"
        android:layout_toEndOf="@+id/nav_header_rating"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/star"
        android:textColor="@color/color_secondary_text"
        android:textSize="24sp" />



</RelativeLayout>