<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/nec_details_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background"
        android:layout_marginLeft="-16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/nec_details_gradient">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/nec_details_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/architects_daughter"
                android:text="@string/nec_details"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/color_text"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/necDetails_back_button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/exit"
                android:background="@drawable/black_back_button" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>



    <RelativeLayout
        android:id="@+id/nec_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/nec_type_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/architects_daughter"
                android:text="@string/type"
                android:textColor="@color/color_text"
                android:textSize="25sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/nec_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/architects_daughter"
                android:text="@string/date"
                android:textColor="@color/color_secondary_text"
                android:textSize="15sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/nec_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/architects_daughter"
                android:text="@string/description"
                android:textColor="@color/color_text"
                android:textSize="20sp" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/nec_partner_info"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/background">

        <ImageView
            android:id="@+id/partner_picture"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/profile_image"
            android:scaleType="fitCenter"
            android:src="@drawable/default_image" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/nec_partner_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/requester_desc"
            android:textColor="@color/color_secondary_text"
            android:textSize="15sp" />

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/accept_nec"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/nec_button_gradient"
        android:fontFamily="@font/architects_daughter"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/accept_necessity"
        android:textAlignment="center"
        android:textColor="@color/color_text"
        android:textSize="18sp"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/edit_nec"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/nec_button_gradient"
        android:fontFamily="@font/architects_daughter"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/edit_necessity"
        android:textAlignment="center"
        android:textColor="@color/color_text"
        android:textSize="18sp"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/complete_nec"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/nec_button_gradient"
        android:fontFamily="@font/architects_daughter"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/complete_nec"
        android:textAlignment="center"
        android:textColor="@color/color_text"
        android:textSize="18sp"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/delete_nec"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/signout_button"
        android:fontFamily="@font/architects_daughter"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/delete_necessity"
        android:textAlignment="center"
        android:textColor="@color/color_text"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>